force-app/main/default/objects/Failure_Code__c/Failure_Code__c.object-meta.xml
<CustomObject>
    <label>Failure Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Failure Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>