force-app/main/default/objects/Failure_Code__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Sample Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>