force-app/main/default/objects/Failure_Code__c/fields/CodeSetId__c.field-meta.xml
<CustomField>
    <fullName>CodeSetId__c</fullName>
    <formula>CASESAFEID(TFR_Labour_Effect__r.Code_Set__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodeSetId</label>
    <type>Text</type>
</CustomField>