force-app/main/default/objects/Failure_Code__c/fields/FPV_Key__c.field-meta.xml
<CustomField>
    <fullName>FPV_Key__c</fullName>
    <label>FPV Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>