force-app/main/default/objects/Failure_Code__c/fields/FPV_Validation__c.field-meta.xml
<CustomField>
    <fullName>FPV_Validation__c</fullName>
    <formula>Name+&apos;-&apos;+ TFR_Part_Effect__r.Product__r.Name+&apos;-&apos;+ VIN_Cut_off__r.VIN_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPV Validation</label>
    <type>Text</type>
</CustomField>