force-app/main/default/objects/Failure_Code__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>CASESAFEID(TFR_Part_Effect__r.Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductId</label>
    <type>Text</type>
</CustomField>