force-app/main/default/objects/Failure_Code__c/fields/Sample_Collected__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collected__c</fullName>
    <label>Sample Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>