force-app/main/default/objects/Failure_Code__c/fields/TFR_Part_Effect__c.field-meta.xml
<CustomField>
    <fullName>TFR_Part_Effect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TFR Part Effect</label>
    <referenceTo>TFR_Part_Effect__c</referenceTo>
    <relationshipLabel>Failure Code</relationshipLabel>
    <relationshipName>Failure_Code</relationshipName>
    <type>Lookup</type>
</CustomField>