force-app/main/default/objects/Failure_Code__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Labour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>