force-app/main/default/objects/Failure_Code__c/fields/VIN_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>VIN_Cut_off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIN Cut off</label>
    <referenceTo>TFR__c</referenceTo>
    <relationshipLabel>Failure Code</relationshipLabel>
    <relationshipName>Failure_Code</relationshipName>
    <type>Lookup</type>
</CustomField>