force-app/main/default/objects/Failure_Code__c/fields/VIN_Cut_off_No__c.field-meta.xml
<CustomField>
    <fullName>VIN_Cut_off_No__c</fullName>
    <formula>VIN_Cut_off__r.VIN_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Cut off No</label>
    <type>Text</type>
</CustomField>