force-app/main/default/objects/Failure_Code__c/fields/VINCutOffLast8Digits__c.field-meta.xml
<CustomField>
    <fullName>VINCutOffLast8Digits__c</fullName>
    <formula>RIGHT(VIN_Cut_off_No__c, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VINCutOffLast8Digits</label>
    <type>Text</type>
</CustomField>