force-app/main/default/objects/Failure_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Size__c</columns>
    <columns>Is_Active__c</columns>
    <columns>FPV_Key__c</columns>
    <columns>Sample_Collected__c</columns>
    <columns>VIN_Cut_off_No__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TFR_Part_Effect__c</columns>
    <columns>VIN_Cut_off__c</columns>
    <columns>Product_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>